update working directory in actions file

--- a/calc_design_patterns/.github/workflows/python-app.yml
+++ b/calc_design_patterns/.github/workflows/python-app.yml
@@ -13,6 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+working-directory: is219/calc_design_patterns
 
     steps:
     - uses: actions/checkout@v3
